# Ramen

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.txt  README.txt  TODO.txt
ramen/: CMakeLists.txt  align.hpp  assert.cpp  config.hpp  empty.cpp  empty.hpp  main.cpp  name.cpp  name.hpp  poly.hpp  poly_copyable.hpp  poly_indexable_regular.hpp  poly_regular.hpp  ref_counted.hpp  typeinfo.cpp  typeinfo.hpp  version.hpp  visibility.hpp
ramen/Concepts/: IndexableRegularConcept.hpp
ramen/GL/: gl.cpp  lut3d.cpp  lut3d.hpp  program.cpp  program.hpp
ramen/Qr/: QrColor.cpp  QrColor.hpp  QrColorButton.cpp  QrColorButton.hpp  QrContainerWidget.cpp  QrContainerWidget.hpp  QrLabelSeparator.cpp  QrLabelSeparator.hpp
ramen/algorithm/: for_each_position.hpp
ramen/anim/: any_curve.cpp  any_curve.hpp  clipboard.cpp  clipboard.hpp  curve.hpp  curve_algorithm.cpp  curve_algorithm.hpp  curve_fwd.hpp  curve_to_half_lut.cpp  curve_to_half_lut.hpp  double_curve.cpp  double_curve.hpp  double_key.cpp  double_key.hpp  float_curve.cpp  float_key.cpp  keyframe.hpp  shape_curve.hpp  shape_key.hpp
ramen/app/: application.cpp  application.hpp  composition.cpp  composition.hpp  document.cpp  document.hpp  export_selected_nodes.cpp  import_composition.cpp  plugin_manager.cpp  plugin_manager.hpp  preferences.cpp  preferences.hpp  preferences_fwd.hpp
ramen/benchmark/: poly_bench.cpp
ramen/concepts/: IndexableRegularConcept.hpp  ParamValueConcept.hpp
ramen/container/: array.hpp  dictionary.hpp  ptr_vector_util.hpp  unique_name_map.hpp
ramen/dependency/: dependency.cpp  dependency.hpp  dgraph.cpp  dgraph.hpp  dgraph_fwd.hpp  dnode.cpp  dnode.hpp  graph.cpp  graph.hpp  node.cpp  node.hpp  node_fwd.hpp  relation.hpp  sub_graph.cpp  sub_graph.hpp
ramen/expressions/: test.cpp  test.hpp
ramen/filesystem/: path.hpp  path_sequence.cpp  path_sequence.hpp
ramen/flipbook/: djv_flipbook.cpp  external_flipbook.cpp  factory.cpp  factory.hpp  flipbook.cpp  internal_flipbook.cpp  internal_flipbook.hpp  render_flipbook.cpp
ramen/hash/: generator.cpp  generator.hpp  md5.cpp  md5.hpp
ramen/image/: buffer.cpp  mipmap_sampler.hpp
ramen/imageio/: algorithm.hpp  enums.hpp  exceptions.cpp  exceptions.hpp  factory.cpp  factory.hpp  format.cpp  format.hpp  imageio_fwd.hpp  imf_memory_stream.cpp  imf_memory_stream.hpp  import_multichannel_exr.cpp  import_multichannel_exr.hpp  memory.hpp  multichannel_reader.cpp  multichannel_reader.hpp  reader.cpp  reader.hpp  writer.hpp
ramen/iterator/: poly_iterator.hpp
ramen/manipulators/: circle_manipulator.cpp  draw.cpp  manipulable.cpp  manipulable.hpp  manipulable_fwd.hpp  manipulator.cpp  manipulator.hpp  manipulator_fwd.hpp  pick.cpp  point2_manipulator.cpp  quad_manipulator.cpp  transform2_manipulator.cpp  util.cpp
ramen/memory/: image_cache.cpp  image_cache.hpp  image_disk_cache.hpp  manager.cpp  manager.hpp
ramen/movieio/: factory.cpp  factory.hpp  image_seq_reader.cpp
ramen/nodes/: class_metadata.cpp  class_metadata.hpp  composite_node.cpp  composite_node.hpp  edge.cpp  edge.hpp  factory.cpp  factory.hpp  graph.cpp  graph.hpp  graph_algorithm.cpp  graph_algorithm.hpp  graph_color.hpp  graph_fwd.hpp  graph_modifier.cpp  graph_modifier.hpp  group_node.cpp  group_node.hpp  image_node.cpp  image_node.hpp  input_plug_info.hpp  node.cpp  node.hpp  node_class_metadata.cpp  node_class_metadata.hpp  node_factory.cpp  node_factory.hpp  node_fwd.hpp  node_graph.cpp  node_graph.hpp  node_graph_modifier.cpp  node_graph_modifier.hpp  node_metaclass.hpp  node_plug.cpp  node_plug.hpp  node_visitor.cpp  node_visitor.hpp  plug.cpp  plug.hpp  visitor.cpp  (+3 more)
ramen/noise/: simplex_noise.cpp
ramen/params/: animated_param.cpp  animated_param.hpp  animated_param_command.cpp  animated_param_command.hpp  animated_param_command_fwd.hpp  animated_param_fwd.hpp  aspect_ratio_param.cpp  aspect_ratio_param.hpp  bool_param.cpp  bool_param.hpp  button_param.cpp  button_param.hpp  color_param.cpp  color_param.hpp  combo_group_param.cpp  combo_group_param.hpp  composite_param.cpp  composite_param.hpp  composite_parameterised.cpp  composite_parameterised.hpp  curve_param.cpp  curve_param.hpp  expression_commands.cpp  expression_commands.hpp  file_param.cpp  file_param.hpp  float2_param.cpp  float2_param.hpp  float3_param.cpp  float3_param.hpp  float_param.cpp  float_param.hpp  group_param.cpp  group_param.hpp  image_format_param.cpp  image_format_param.hpp  inspector_param.cpp  inspector_param.hpp  motion_blur_info.cpp  motion_blur_info.hpp  (+40 more)
ramen/python/: access.cpp  access.hpp  export_application.cpp  export_composite_node.cpp  export_composition.cpp  export_document.cpp  export_manipulable.cpp  export_node.cpp  export_param.cpp  export_parameterised.cpp  export_ramen.cpp  export_ramen.hpp  export_system.cpp  export_ui.cpp  export_world_node.cpp  interpreter.cpp  interpreter.hpp  pyside.cpp  pyside.hpp  read_only_vector_proxies.hpp  test.cpp  test.hpp
ramen/random/: goulburn.cpp  goulburn.hpp
ramen/rdk/: rdk.cpp
ramen/render/: context.cpp  context.hpp  context_guard.cpp  render_sequence.cpp  render_sequence.hpp
ramen/serialization/: yaml.cpp  yaml.hpp
ramen/system/: enums.hpp  shared_library.cpp  shared_library.hpp  system.cpp  system.hpp  system_pvt.hpp  system_pvt_linux.cpp
ramen/test/: expressions.cpp  geom.cpp  memory.cpp  name.cpp  nodes.cpp  params.cpp  poly.cpp  python.cpp  string.cpp  test.cpp  test.hpp  test_node.cpp  test_node.hpp  unit_test.hpp
ramen/ui/: add_node_command.cpp  add_node_command.hpp  edit_commands.cpp  edit_commands.hpp  events.cpp  events.hpp  expression_editor.cpp  expression_editor.hpp  graph_layout.cpp  graph_layout.hpp  main_window.cpp  main_window.hpp  palette.cpp  palette.hpp  render_composition.cpp  time_controls.cpp  time_controls.hpp  tool.hpp  user_interface.cpp  user_interface.hpp  user_interface_fwd.hpp
ramen/undo/: command.cpp  command.hpp  stack.cpp  stack.hpp
ramen/util/: calculator.cpp  (+15 more)
ramen_ui/: CMakeLists.txt  config.hpp  splash_screen.cpp  splash_screen.hpp  user_interface.cpp  user_interface.hpp  user_interface_fwd.hpp
(+292 files in other folders)
